--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "dependencies": {
-    "@splunk/otel": "^3.0.1"
+    "@opentelemetry/exporter-trace-otlp-http": "^0.57.2",
+    "@opentelemetry/sdk-trace-node": "^1.30.1",
+    "@splunk/otel": "^3.0.1",
+    "express": "^5.0.1"
   }
 }
